# solvespace

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  build_instructions.md  config.h.in  prebuild.sh  solvespace.kdev4  tcheck.sh
.github/scripts/: build-macos.sh  build-ubuntu.sh  install-macos.sh  install-ubuntu.sh
bench/: harness.cpp
cmake/: ClangFormat.cmake
developer_docs/: IdLists_Entities_and_Remap.txt  Solver_Transforms.txt
res/: CMakeLists.txt
src/: CMakeLists.txt  bsp.cpp  clipboard.cpp  clipboardrequest.h  constraint.cpp  constraint.h  constraintbase.h  constrainteq.cpp  datastructures.h  debugging.h  describescreen.cpp  draw.cpp  drawconstraint.cpp  dsc.h  entity.cpp  entity.h  entitybase.cpp  entitybase.h  entitymain.h  export.cpp  exportvector.cpp  expr.cpp  expr.h  file.cpp  filewriter.h  graphicswin.cpp  group.cpp  group.h  groupmesh.cpp  importdxf.cpp  importidf.cpp  importmesh.cpp  lib.cpp  mesh.cpp  modify.cpp  mouse.cpp  polygon.cpp  polygon.h  request.cpp  request.h  (+27 more)
src/constraint/: constraint.cpp  constraint.h  constraintbase.h2  draw.cpp  menu.cpp
src/entity/: bandedmatrix.cpp  bandedmatrix.h  entity.cpp  entity.h
src/filewriter/: dxffilewriter.cpp  dxffilewriter.h  epsfilewriter.cpp  epsfilewriter.h  gcodefilewriter.cpp  gcodefilewriter.h  hpglfilewriter.cpp  hpglfilewriter.h  pdffilewriter.cpp  pdffilewriter.h  step2dfilewriter.cpp  step2dfilewriter.h  stepfilewriter.cpp  stepfilewriter.h  stipplepattern.cpp  stipplepattern.h  svgfilewriter.cpp  svgfilewriter.h  vectorfilewriter.cpp  vectorfilewriter.h
src/geometry/: bbox.cpp  bbox.h  bsp.cpp  mesh.cpp  point2d.cpp  point2d.h  polygon.cpp  polygon.h  polyline.cpp  quaternion.cpp  quaternion.h  striangle.h  striangle.h2  striangle.hpp  vector.h  vector.h2  vector.hpp  vector4.cpp  vector4.h
src/gw/: draw.cpp  graphicswin.cpp  graphicswindow.cpp  graphicswindow.h  modify.cpp  mouse.cpp
src/import/: importdxf.cpp  importidf.cpp  importmesh.cpp
src/platform/: EventHooks.cpp  EventHooks.h  entrycli.cpp  gui.cpp  gui.h  guihaiku.cpp  guinone.cpp  platform.cpp  platform.h
src/platform/haiku/: .clang-format  .gitignore  App.cpp  App.h  CMakeLists.txt  EditorView.cpp  EditorView.h  EventHooksHaiku.cpp  GroupsListView.cpp  GroupsListView.h  HVIFUtil.cpp  HVIFUtil.h  HaikuSpaceUI.cpp  HaikuSpaceUI.h  KeyboardShortcuts.cpp  KeyboardShortcuts.h  MainWindow.cpp  MainWindow.h  Makefile  PropertyBrowser.cpp  PropertyBrowser.h  README.md  Resources.rdef  Toolbar.cpp  Toolbar.h  ViewParameters.cpp  ViewParameters.h  guihaiku.cpp
src/platform/haiku/ListView/: DragSortableListView.cpp  DragSortableListView.h  MouseWheelFilter.h  ThumbListItem.cpp  ThumbListItem.h
src/platform/haiku/resources/icons/: angle-tool.hvif  arc-tool.hvif  circle-tool.hvif  closed-eye.hvif  constrain-equal-tool.hvif  constrain-parallel-normals-tool.hvif  constrain-perpendicular-tool.hvif  constrain-point-on-line-tool.hvif  constrain-symmetric-tool.hvif  construction-tool.hvif  cubic-spline-tool.hvif  datum-point-tool.hvif  distance-tool.hvif  horizontal-tool.hvif  line-tool.hvif  nearest-iso-tool.hvif  nearest-ortho-tool.hvif  open-eye.hvif  other-supplementary-angle-tool.hvif  parallel-tool.hvif  rect-tool.hvif  ref-tool.hvif  solvespace.hvif  split-curves-tool.hvif  tangent-arc-tool.hvif  text-tool.hvif  toggle-workplanes.hvif  vertical-tool.hvif
src/platform/haiku/ui/: App.cpp  App.h  DrawButton.cpp  DrawButton.h  EditorView.cpp  EditorView.h  GroupsListView.cpp  GroupsListView.h  HVIFUtil.cpp  HVIFUtil.h  HaikuSpaceUI.cpp  HaikuSpaceUI.h  MainWindow.cpp  MainWindow.h  PropertyBrowser.cpp  PropertyBrowser.h  Solver.cpp  Solver.h  Toolbar.cpp  Toolbar.h  ViewParameters.cpp  ViewParameters.h
src/platform/haiku/ui/ListView/: DragSortableListView.cpp  DragSortableListView.h  ThumbListItem.cpp
src/render/: gl3shader.cpp  gl3shader.h  matrix.cpp  matrix.h  render.cpp  render.h  render2d.cpp  renderagg.cpp  rendercairo.cpp  rendergl1.cpp  rendergl3.cpp
src/srf/: boolean.cpp  curve.cpp  merge.cpp  ratpoly.cpp  raycast.cpp  shell.cpp  surface.cpp  surface.h  surfinter.cpp  triangulate.cpp
src/ssui/: clipboard.cpp  clipboardrequest.h  export.cpp  file.cpp  generate.cpp  menu.cpp  solvespaceui.cpp  solvespaceui.h  ui.h  undoredo.cpp
src/tw/: confscreen.cpp  style.cpp  textscreens.cpp  textwin.cpp  textwindow.cpp  textwindow.h  view.cpp
test/: debugtool.cpp  harness.cpp  harness.h
test/analysis/contour_area/: test.cpp
test/constraint/angle/: test.cpp
test/constraint/at_midpoint/: test.cpp
test/constraint/curve_curve_tangent/: test.cpp
test/constraint/equal_angle/: test.cpp
test/constraint/equal_line_arc_len/: test.cpp
test/constraint/length_difference/: test.cpp
test/constraint/pt_line_distance/: test.cpp
test/constraint/pt_on_circle/: test.cpp
test/constraint/pt_on_line/: test.cpp
test/constraint/pt_plane_distance/: test.cpp
test/constraint/pt_pt_distance/: test.cpp
test/constraint/same_orientation/: test.cpp
test/constraint/symmetric/: test.cpp
test/constraint/symmetric_horiz/: test.cpp
test/constraint/vertical/: test.cpp
test/core/expr/: test.cpp
test/core/locale/: test.cpp
test/core/path/: test.cpp
test/group/link/: normal.out.slvs
test/group/translate_asy/: test.cpp
test/group/translate_nd/: test.cpp
test/request/circle/: test.cpp
test/request/image/: test.cpp
test/unit/: constraint-test.cpp  striangle-test.cpp
